# DroneLanding

./: README.md  build.gradle
app/: build.gradle  proguard-rules.pro
app/bugly/: BuglySymtabLog.txt  BuglyUploadLog.txt
app/src/androidTest/java/com/liyang/droneplus/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: words.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  tracker.cpp  tracker.h  trackerForTarmac.cpp  trackerForTarmac.h  trackingTargetForFDSST.cpp
app/src/main/cpp/apriltag/common/: image_f32.c  matd.c
app/src/main/cpp/fdsst/: fdssttracker.cpp  fdssttracker.hpp  fhog.cpp  fhog.h  sse.hpp  trackerForFdsst.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/cpp/include/libyuv/: basic_types.h
app/src/main/java/com/liyang/droneplus/: MainActivity - 副本.txt  MainActivity-2019年11月18日.txt  MainActivity-2019年12月17日.txt  MainActivity-2019年12月24日.txt  MainActivity-2019年12月25日.txt  MainActivity-2020年1月7日.txt  MainActivity-2020年2月11日.txt  MainActivity.java  TarmacResult.java  YuvUtils.java
app/src/main/java/com/liyang/droneplus/activity/: ConnectionActivity.java
app/src/main/java/com/liyang/droneplus/adpater/: RecognitionResultAdapter.java
app/src/main/java/com/liyang/droneplus/application/: DemoApplication.java  MApplication.java
app/src/main/java/com/liyang/droneplus/apriltags/: ApriltagPoseEstimation.java  ApriltagR.java
app/src/main/java/com/liyang/droneplus/bean/: DetectModel.java  RecognitionResultItem.java  TimeLineAction.java
app/src/main/java/com/liyang/droneplus/classifier/: ApriltagsDetectAPIModel.java  ReadConfigFileUtil.java  Recognizer.java  RecognizerForAprilTags.java  TarmacDetectAPIModel.java  Yolov2Poppy.java  yolov2Tiny.java
app/src/main/java/com/liyang/droneplus/entity/: PIDEntityInc.java
app/src/main/java/com/liyang/droneplus/graduationproject/: MainActivity.java
app/src/main/java/com/liyang/droneplus/graduationproject/detection/: ClassifierFromTensorFlow.java  TensorFlowObjectDetectionAPIModel.java
app/src/main/java/com/liyang/droneplus/graduationproject/detection/tflite/: TFLiteObjectDetectionAPIModel.java
app/src/main/java/com/liyang/droneplus/graduationproject/interf/: ConfirmLocationForTracking.java
app/src/main/java/com/liyang/droneplus/graduationproject/jni/: NativeHelper.java
app/src/main/java/com/liyang/droneplus/graduationproject/test/: PictureConversionTestActivity.java
app/src/main/java/com/liyang/droneplus/graduationproject/tracking/: FDSSTResultFormJNI.java  KCFResultFormJNI.java
app/src/main/java/com/liyang/droneplus/graduationproject/utils/: BorderedText.java  ImageUtils.java  WriteFileUtil.java  YuvUtils.java
app/src/main/java/com/liyang/droneplus/graduationproject/utils/dialogs/: CommonDialogFragment.java  DialogFragmentHelper.java  DialogUtils.java  IDialogResultListener.java
app/src/main/java/com/liyang/droneplus/graduationproject/view/: AutoFitTextureView.java  MultiBoxTracker.java  OverlayView.java  TouchPaintView.java
app/src/main/java/com/liyang/droneplus/media/: DJIVideoStreamDecoder.java  NativeHelper.java
app/src/main/java/com/liyang/droneplus/util/: BorderedText.java  GPSTransformUtil.java  GeneralUtils.java  ImageUtils.java  LogUtil.java  Logger.java  ObjectTracker.java  PIDControlIncTest.java  Size.java  WriteFileUtil.java
app/src/main/java/com/liyang/droneplus/view/: CrossView.java  CustomAlertDialog.java  CustomSquareImgView.java  OverlayView.java  WaypointView.java
app/src/main/res/drawable/: shape_btn_background.xml
app/src/main/res/layout/: activity_connection.xml  activity_main.xml  activity_main2.xml  activity_picture_conversion_test.xml  detection_dialog.xml  dialog_positionsetting.xml  dialog_positionsetting2.xml  mapview.xml  recognition_result_list_item.xml  speedpara_dialog.xml  vidview.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/liyang/droneplus/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary330/: build.gradle
